Externalize clone logic to script, use dynamic PATH
Co-authored-by: Ona <no-reply@ona.com>

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,8 +3,8 @@
 	"image": "mcr.microsoft.com/devcontainers/base:ubuntu-24.04",
 	"workspaceMount": "source=/workspaces,target=/workspaces,type=bind",
 	"workspaceFolder": "/workspaces",
-	"postStartCommand": "IFS=';' read -ra REPOS <<< \"$MY_ADDITIONAL_REPOS\"; for repo in \"${REPOS[@]}\"; do [ -z \"$repo\" ] && continue; name=$(basename \"$repo\" .git); [ -d \"/workspaces/$name\" ] || git clone \"$repo\" \"/workspaces/$name\"; done",
+	"postStartCommand": ".devcontainer/clone_repos.sh",
 	"remoteEnv": {
-		"PATH": "${containerEnv:PATH}:/workspaces/multi-repo-via-env-var/.devcontainer"
+		"PATH": "${containerEnv:PATH}:${containerWorkspaceFolder}/.devcontainer"
 	}
 }
