Fix PATH to use localWorkspaceFolder
Co-authored-by: Ona <no-reply@ona.com>

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,6 +5,6 @@
 	"workspaceFolder": "/workspaces",
 	"postStartCommand": ".devcontainer/clone_repos.sh",
 	"remoteEnv": {
-		"PATH": "${containerEnv:PATH}:${containerWorkspaceFolder}/.devcontainer"
+		"PATH": "${containerEnv:PATH}:${localWorkspaceFolder}/.devcontainer"
 	}
 }
